WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47329
Chromium multi-dll build broken due to WebResourceRawHeaders methods lacking WEBKIT_API decl spec
https://bugs.webkit.org/show_bug.cgi?id=47329
Summary
Chromium multi-dll build broken due to WebResourceRawHeaders methods lacking ...
Andrey Kosyakov
Reported
2010-10-07 02:08:42 PDT
WebKit/chromium/public/WebResourceRawHeaders.h misses WEBKIT_API on several methods, which results in methods not being exported from the DLL. This breaks chromium multi-dll build.
Attachments
patch
(2.93 KB, patch)
2010-10-07 02:16 PDT
,
Andrey Kosyakov
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2010-10-07 02:16:12 PDT
Created
attachment 70055
[details]
patch
Andrey Kosyakov
Comment 2
2010-10-07 05:26:55 PDT
Committed manually
r69295
:
http://trac.webkit.org/changeset/69295
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug