2010-10-07  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Yury Semikhatsky.

        Chromium multi-dll build broken due to WebResourceRawHeaders methods lacking WEBKIT_API decl spec
        https://bugs.webkit.org/show_bug.cgi?id=47329

        * public/WebResourceRawHeaders.h:
        (WebKit::WebResourceRawHeaders::WebResourceRawHeaders):
        (WebKit::WebResourceRawHeaders::~WebResourceRawHeaders):
        (WebKit::WebResourceRawHeaders::operator =):
        * src/WebResourceRawHeaders.cpp:
        (WebKit::WebResourceRawHeaders::initialize):
        (WebKit::WebResourceRawHeaders::reset):
        (WebKit::WebResourceRawHeaders::assign):


Canonical link: https://commits.webkit.org/59896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69295 268f45cc-cd09-0410-ab3c-d52691b4dbfc